Settings with Languages and Currency

--- a/lib/core/localization/lang/en.json
+++ b/lib/core/localization/lang/en.json
@@ -29,5 +29,6 @@
   "dark_mode": "Dark Mode",
   "light_mode": "Light Mode",
   "system": "System",
-  "appearance": "Appearance"
+  "appearance": "Appearance",
+  "currency": "Currency"
 }
