--- a/lib/core/localization/lang/hi.json
+++ b/lib/core/localization/lang/hi.json
@@ -29,5 +29,6 @@
   "dark_mode": "डार्क मोड",
   "light_mode": "लाइट मोड",
   "system": "सिस्टम",
-  "appearance": "दिखावट"
+  "appearance": "दिखावट",
+  "currency": "मुद्रा"
 }
