--- a/lib/core/localization/lang/zh.json
+++ b/lib/core/localization/lang/zh.json
@@ -29,5 +29,6 @@
   "dark_mode": "深色模式",
   "light_mode": "浅色模式",
   "system": "系统",
-  "appearance": "外观"
+  "appearance": "外观",
+  "currency": "货币"
 }
